--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -69,6 +69,13 @@
                 "email_not_valid": "Email is not valid"
               }
             }
+          },
+          "wallet": {
+            "attributes": {
+              "base": {
+                "cannot_disable_with_nonzero_balance": "Cannot be disabled because wallet has remaining balance. Wallet balance must be zero before it can be disabled. This can be done by either creating a transaction, or completing a reconciliation where the resulting wallet balance is zero.\n"
+              }
+            }
           }
         }
       }
