--- a/config/locales/active_record.en.yml
+++ b/config/locales/active_record.en.yml
@@ -46,3 +46,11 @@ en:
           attributes:
             base:
               email_not_valid: Email is not valid
+
+        wallet:
+          attributes:
+            base:
+              cannot_disable_with_nonzero_balance: >
+                Cannot be disabled because wallet has remaining balance. Wallet balance must be zero before it can be
+                disabled. This can be done by either creating a transaction, or completing a reconciliation where the
+                resulting wallet balance is zero.
