Update wallet balances and create adjustment transaction when finishing a reconciliation

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -1,6 +1,8 @@
 ---
 pt-BR:
   locale_name: Português
+  reconciliations:
+    transaction_name: 'Ajuste de Saldo da Reconciliação'
   activerecord:
     errors:
       messages:
