--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,4 +2,5 @@
 en:
   locale_name: English
   reconciliations:
-    transaction_name: 'Reconciliation Balance Adjustment'
+    transaction_name: Reconciliation Balance Adjustment
+    category_name: Reconciliations
