--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -685,6 +685,7 @@
           "disable_confirmation": "Tem certeza? Você pode re-habilitar isto no futuro.",
           "edit": "Editar",
           "generic_error": "Um erro inesperado ocorreu. Por favor atualize a página e tente novamente.",
+          "no_records": "Não há nada para exibir",
           "page_desc": "Exibindo %{items} de %{total}",
           "pagination": "Paginação",
           "per_page": "Por Página:",
@@ -761,11 +762,20 @@
           "submit": "Salvar"
         },
         "index": {
+          "cancel": "Cancelar",
+          "confirm_cancel_message": "Are you sure you want to cancel the reconciliation? This cannot be undone.",
+          "finish": "Concluir",
           "new": "Iniciar nova Reconciliação",
           "title": "Reconciliações"
         },
         "info_alert": {
           "message": "Há uma reconcilição em andamento para o dia %{date}. <a href=\"%{href}\">Clique aqui</a> para acessá-la."
+        },
+        "list": {
+          "desc_cancelled": "Cancelada em %{date}",
+          "desc_finished": "Concluída em %{date}",
+          "desc_in_progress": "Em andamento",
+          "name": "Reconciliação do dia %{date}"
         },
         "show": {
           "calculated_balance": "Calculado",
