Add transaction period dates to reconciliation show, add reconciliation to vertical menu, improve menu UX

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -647,6 +647,7 @@
           "dashboard": "Dashboard",
           "profile": "My Profile",
           "profiles": "Profiles",
+          "reconciliations": "Reconciliations",
           "sign_in": "Sign In",
           "sign_out": "Sign Out",
           "sign_up": "Sign Up",
@@ -738,8 +739,9 @@
           "status": "Status",
           "sub_header_actions": "Actions",
           "sub_header_balances": "Overall Balance",
-          "sub_header_transactions": "Period Transactions",
+          "sub_header_transactions": "Transactions for Period",
           "sub_header_wallets": "Wallet Balances",
+          "sub_sub_header_transactions": "From %{start_date} to %{end_date}",
           "table_header_calculated_balance": "Calc.",
           "table_header_real_balance": "Actual",
           "table_header_wallet_name": "Wallet",
