--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -701,6 +701,7 @@
           "dashboard": "Dashboard",
           "profile": "Meu Perfil",
           "profiles": "Perfis",
+          "reconciliations": "Reconciliações",
           "sign_in": "Fazer Login",
           "sign_out": "Sair da Conta",
           "sign_up": "Criar Conta",
@@ -794,6 +795,7 @@
           "sub_header_balances": "Saldo Geral",
           "sub_header_transactions": "Transações no Período",
           "sub_header_wallets": "Saldos das Carteiras",
+          "sub_sub_header_transactions": "De %{start_date} a %{end_date}",
           "table_header_calculated_balance": "Calc.",
           "table_header_real_balance": "Real",
           "table_header_wallet_name": "Carteira",
