--- a/config/locales/active_record.en.yml
+++ b/config/locales/active_record.en.yml
@@ -60,4 +60,7 @@ en:
               cannot_disable_with_nonzero_balance: >-
                 Cannot be disabled because wallet has remaining balance. Wallet balance must be zero before it can be
                 disabled. This can be done by either creating a transaction, or completing a reconciliation where the
-                resulting wallet balance is zero.
+                resulting wallet balance is zero
+              cannot_disable_with_reconciliation_in_progress: >-
+                Cannot be disabled because there is a reconciliation in progress. The reconciliation must first be
+                either cancelled or finished so this wallet can be disabled
