--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -642,6 +642,7 @@
         "show": {
           "category_summary": "Resumo das Categorias",
           "recent_transactions": "Transações Recentes",
+          "sub_header_day_chart": "Daily Totals",
           "title": "Dashboard"
         }
       },
