--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -35,6 +35,7 @@ en:
         title: Dashboard
         recent_transactions: Recent Transactions
         category_summary: Categories Summary
+        sub_header_day_chart: Daily Totals
     devise:
       alternative_links: 'Or, you can also:'
       sign_in: Sign In
