--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -640,9 +640,14 @@
       },
       "dashboard": {
         "show": {
-          "category_summary": "Resumo das Categorias",
-          "recent_transactions": "Transações Recentes",
-          "sub_header_day_chart": "Daily Totals",
+          "average_spend": "Gasto Diário",
+          "money_in": "Receita",
+          "money_saved": "Quantia salva",
+          "spends": "Gastos",
+          "sub_header_category_summary": "Resumo das Categorias",
+          "sub_header_day_chart": "Totais Diários",
+          "sub_header_recent_transactions": "Transações Recentes",
+          "sub_header_transactions_summary": "Resumo",
           "title": "Dashboard"
         }
       },
